--- a/Pear/Controllers/New New Redesign/Onboarding/Onboarding Explaination Pages/Page 3/OnboardingExplainationPage3ViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Onboarding/Onboarding Explaination Pages/Page 3/OnboardingExplainationPage3ViewController.storyboard
@@ -37,14 +37,11 @@
                                     <action selector="continueButtonClicked:" destination="mJ8-wo-IG8" eventType="touchUpInside" id="IGV-I1-M32"/>
                                 </connections>
                             </button>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="onboarding-meme-3" translatesAutoresizingMaskIntoConstraints="NO" id="L3Q-s1-RX1">
-                                <rect key="frame" x="20" y="251.33333333333334" width="335" height="430.66666666666663"/>
-                                <constraints>
-                                    <constraint firstAttribute="width" secondItem="L3Q-s1-RX1" secondAttribute="height" multiplier="1029:1323" id="hpY-Qg-Lqf"/>
-                                </constraints>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" verticalCompressionResistancePriority="749" image="onboarding-meme-3" translatesAutoresizingMaskIntoConstraints="NO" id="L3Q-s1-RX1">
+                                <rect key="frame" x="20" y="138.66666666666669" width="335" height="543.33333333333326"/>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Plus, they usually know us well for a reason" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="he2-Fq-k2b">
-                                <rect key="frame" x="30" y="64.000000000000014" width="315" height="167.33333333333337"/>
+                                <rect key="frame" x="30" y="64" width="315" height="54.666666666666657"/>
                                 <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="20"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
