--- a/Pear/Controllers/New New Redesign/Onboarding/Shared Components/Prompt Input/Prompt Picker/PromptInputViewController.storyboard
+++ b/Pear/Controllers/New New Redesign/Onboarding/Shared Components/Prompt Input/Prompt Picker/PromptInputViewController.storyboard
@@ -89,7 +89,7 @@
                                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="yQN-yn-KD9">
                                                     <rect key="frame" x="35" y="17" width="305" height="53"/>
                                                     <fontDescription key="fontDescription" name="OpenSans-Bold" family="Open Sans" pointSize="14"/>
-                                                    <nil key="textColor"/>
+                                                    <color key="textColor" name="primaryTextColor"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
                                             </subviews>
@@ -133,6 +133,9 @@
         <image name="onboarding-back-button" width="170.66667175292969" height="170.66667175292969"/>
         <namedColor name="primaryBrandColor">
             <color red="0.29411764705882354" green="0.86274509803921573" blue="0.52156862745098043" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="primaryTextColor">
+            <color red="0.20000000298023224" green="0.20000000298023224" blue="0.20000000298023224" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
