Adds buttons to main discovery vc

--- a/Pear/Controllers/Discovery Flow/Decision Discovery/DiscoveryDecisionViewController.storyboard
+++ b/Pear/Controllers/Discovery Flow/Decision Discovery/DiscoveryDecisionViewController.storyboard
@@ -33,12 +33,68 @@
                                 <rect key="frame" x="188.5" y="371.5" width="37" height="37"/>
                                 <color key="color" white="0.66666666666666663" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             </activityIndicatorView>
+                            <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="4TR-zY-OpF" userLabel="Header Container">
+                                <rect key="frame" x="0.0" y="44" width="414" height="0.0"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="chY-h1-cIF" userLabel="Progress View">
+                                        <rect key="frame" x="0.0" y="-1" width="414" height="1"/>
+                                        <color key="backgroundColor" white="0.0" alpha="0.10000000000000001" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <constraints>
+                                            <constraint firstAttribute="height" constant="1" id="dTX-DC-kbi"/>
+                                        </constraints>
+                                    </view>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Vth-JE-3I5">
+                                        <rect key="frame" x="207" y="0.0" width="0.0" height="0.0"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <nil key="textColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pQy-u5-VPp">
+                                        <rect key="frame" x="12" y="-13" width="26" height="26"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" secondItem="pQy-u5-VPp" secondAttribute="height" multiplier="1:1" id="5Za-JR-G0h"/>
+                                            <constraint firstAttribute="width" constant="26" id="Bsv-vl-7wI"/>
+                                        </constraints>
+                                        <state key="normal" image="discovery-icon-filters"/>
+                                        <connections>
+                                            <action selector="filterButtonClicked:" destination="Nm1-IY-Q9N" eventType="touchUpInside" id="BIR-Ub-dkL"/>
+                                        </connections>
+                                    </button>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Z2P-mf-9TT">
+                                        <rect key="frame" x="46" y="-13" width="26" height="26"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="26" id="1Ki-EM-ubo"/>
+                                        </constraints>
+                                        <state key="normal" image="discovery-icon-scan"/>
+                                        <connections>
+                                            <action selector="qrCodeButtonClicked:" destination="Nm1-IY-Q9N" eventType="touchUpInside" id="uAV-0L-uiT"/>
+                                        </connections>
+                                    </button>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="chY-h1-cIF" firstAttribute="width" secondItem="4TR-zY-OpF" secondAttribute="width" id="IDz-Ad-yZZ"/>
+                                    <constraint firstItem="Z2P-mf-9TT" firstAttribute="centerY" secondItem="pQy-u5-VPp" secondAttribute="centerY" id="KV6-aq-Bwl"/>
+                                    <constraint firstItem="Vth-JE-3I5" firstAttribute="centerX" secondItem="4TR-zY-OpF" secondAttribute="centerX" id="Qae-DP-t4u"/>
+                                    <constraint firstAttribute="height" id="fLI-93-ptg"/>
+                                    <constraint firstItem="pQy-u5-VPp" firstAttribute="leading" secondItem="4TR-zY-OpF" secondAttribute="leading" constant="12" id="fXf-wf-Em5"/>
+                                    <constraint firstItem="pQy-u5-VPp" firstAttribute="centerY" secondItem="4TR-zY-OpF" secondAttribute="centerY" id="fgo-jZ-U9y"/>
+                                    <constraint firstItem="chY-h1-cIF" firstAttribute="leading" secondItem="4TR-zY-OpF" secondAttribute="leading" id="hrG-xV-d8J"/>
+                                    <constraint firstAttribute="bottom" secondItem="chY-h1-cIF" secondAttribute="bottom" id="jhe-iY-pR5"/>
+                                    <constraint firstItem="Vth-JE-3I5" firstAttribute="centerY" secondItem="4TR-zY-OpF" secondAttribute="centerY" id="jwd-PP-xud"/>
+                                    <constraint firstItem="Z2P-mf-9TT" firstAttribute="width" secondItem="Z2P-mf-9TT" secondAttribute="height" multiplier="1:1" id="o2H-Vr-dfX"/>
+                                    <constraint firstItem="Z2P-mf-9TT" firstAttribute="leading" secondItem="pQy-u5-VPp" secondAttribute="trailing" constant="8" id="u9A-nI-qf2"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="daT-l3-Kc3" firstAttribute="top" secondItem="wbs-JX-9qf" secondAttribute="bottom" constant="20" id="3eJ-hF-Qj3"/>
                             <constraint firstItem="wbs-JX-9qf" firstAttribute="centerX" secondItem="daT-l3-Kc3" secondAttribute="centerX" id="5WJ-WF-DPT"/>
+                            <constraint firstItem="4TR-zY-OpF" firstAttribute="leading" secondItem="HHx-HB-puo" secondAttribute="leading" id="IfG-m4-iUz"/>
                             <constraint firstItem="daT-l3-Kc3" firstAttribute="centerX" secondItem="HHx-HB-puo" secondAttribute="centerX" id="Z3t-cV-9IO"/>
+                            <constraint firstItem="HHx-HB-puo" firstAttribute="trailing" secondItem="4TR-zY-OpF" secondAttribute="trailing" id="bkI-yY-87p"/>
+                            <constraint firstItem="4TR-zY-OpF" firstAttribute="top" secondItem="HHx-HB-puo" secondAttribute="top" id="dda-rv-fpZ"/>
                             <constraint firstItem="daT-l3-Kc3" firstAttribute="centerY" secondItem="HHx-HB-puo" secondAttribute="centerY" id="g7z-9K-D0A"/>
                             <constraint firstItem="daT-l3-Kc3" firstAttribute="leading" secondItem="HHx-HB-puo" secondAttribute="leading" constant="30" id="hJU-fl-6DO"/>
                             <constraint firstItem="HHx-HB-puo" firstAttribute="trailing" secondItem="daT-l3-Kc3" secondAttribute="trailing" constant="30" id="iyv-A4-si1"/>
@@ -47,6 +103,7 @@
                     </view>
                     <connections>
                         <outlet property="activityIndicator" destination="wbs-JX-9qf" id="kTG-8f-zqq"/>
+                        <outlet property="headerHeightConstraint" destination="fLI-93-ptg" id="5a9-DH-SPV"/>
                         <outlet property="messageLabel" destination="daT-l3-Kc3" id="Sn5-9q-IDp"/>
                     </connections>
                 </viewController>
@@ -55,4 +112,8 @@
             <point key="canvasLocation" x="330" y="-253"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="discovery-icon-filters" width="96" height="96"/>
+        <image name="discovery-icon-scan" width="96" height="96"/>
+    </resources>
 </document>
